SurveyCollectionView request bug fix + APIManager get_surveys dateFilter

--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -27,6 +27,7 @@
 "pseudonym" = "Anonymous#";
 "pseudonym_placeholder" = "Your pseudonym";
 "add_pseudonym" = "Enter pseudonym";
+"api_not_supported" = "App version is outdated. Please update Thinkwhat";
 
 //Common
 "all" = "All";
