--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -187,9 +187,9 @@
 "no_votes" = "Голосов нет";
 "poll_complete_at" = "Опрос выполнен на";
 "voted" = "Проголосовали";
-"most_popular_choice" = "Выбранный Вами ответ является самым популярным!";
-"extra_points" = "Мы пополнили ваш баланс на ";
-"points" = " голоса";
+"most_popular_choice" = "Выбранный вариант в тренде";
+"got_points" = "Вы получили ";
+"points" = " балл(ов)";
 "support_poll" = "Поддержать опрос";
 "next" = "Следующий";
 "comment_posted" = "Комментарий опубликован";
@@ -316,7 +316,7 @@
 "completed" = "Пройдено";
 "preferences" = "Мои предпочтения:";
 "my_balance" = "Мой баланс:";
-"points" = "Баллов";
+//"points" = "Баллов";
 "top_up" = "Пополнить";
 "interests" = "Интересы";
 "social_media_help" = "Прикрепите профиль в социальной сети, чтобы другие пользователи могли связаться с Вами (опционально)";
