--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -369,6 +369,9 @@
 "user_publication_notification_on" = " are on";
 "user_publication_notification_off" = "are off";
 "watch_survey_notification" = "You'll be notified about the results when publication finishes";
+"survey_finished_notification" = "Survey finished!";
+"survey_finished_vote_notification" = "Survey finished. But you can vote!";
+"survey_banned_notification" = "Publication has been banned";
 "open_url_embedded" = "Open in app";
 "open_url_in_app" = "Open in ";
 "save_setting" = "Save";
