--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -369,6 +369,9 @@
 "user_publication_notification_on" = " включены";
 "user_publication_notification_off" = " выключены";
 "watch_survey_notification" = "Вы будете уведомлены о результатах при завершении публикации";
+"survey_finished_notification" = "Опрос завершился!";
+"survey_finished_vote_notification" = "Опрос завершился, но Вы еще можете проголосовать!";
+"survey_banned_notification" = "Публикация была заблокирована";
 "open_url_embedded" = "Открыть в приложении";
 "open_url_in_app" = "Открыть в ";
 "save_setting" = "Сохранить";
