--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -378,3 +378,9 @@
 
 //Userprofile
 "userprofile_is_in_community" = "Is in community";
+"userprofile_subscribers" = "Subscribers";
+"userprofile_publications_created" = "Publications posted";
+"userprofile_community_contribution" = "Сontribution to the community";
+"userprofile_votes_received" = "Votes received";
+"userprofile_comments_received" = "Comments received";
+"userprofile_comments_posted" = "Comments posted";
