--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -384,3 +384,4 @@
 "userprofile_votes_received" = "Votes received";
 "userprofile_comments_received" = "Comments received";
 "userprofile_comments_posted" = "Comments posted";
+"userprofile_compatibility" = "Compatibility";
