--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -384,3 +384,4 @@
 "userprofile_votes_received" = "Голосов получено";
 "userprofile_comments_received" = "Комментариев получено";
 "userprofile_comments_posted" = "Комментариев оставлено";
+"userprofile_compatibility" = "Совместимость";
