--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -101,6 +101,7 @@
 "third" = "Third";
 "back" = "Back";
 "per" = "Per";
+"more_info" = "More info";
 
 //Welcome VC
 "welcomeLabel" = "Welcome to ThinkWhat!";
@@ -385,3 +386,8 @@
 "userprofile_comments_received" = "Comments received";
 "userprofile_comments_posted" = "Comments posted";
 "userprofile_compatibility" = "Compatibility";
+"userprofile_compatibility_level_with_user" = "Your compatibility with ";
+"userprofile_compatibility_level_with_user_is" = " is ";
+"userprofile_compatibility_level_low" = "low";
+"userprofile_compatibility_level_middle" = "middle";
+"userprofile_compatibility_level_high" = "high";
