--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -392,4 +392,4 @@
 "userprofile_compatibility_level_middle" = "middle";
 "userprofile_compatibility_level_high" = "high";
 "userprofile_contrib_hint" = "Topics which user is interested in to discuss within community";
-"userprofile_сompatibility_hint" = "How united you are in the vector of thinking";
+"userprofile_сompatibility_hint" = "The indicator is calculated on the results of surveys in which you participated";
