--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -380,6 +380,7 @@
 //Userprofile
 "userprofile_is_in_community" = "В сообществе";
 "userprofile_subscribers" = "Подписчиков";
+"userprofile_about" = "Обо мне";
 "userprofile_publications_created" = "Публикаций создано";
 "userprofile_community_contribution" = "Вклад в сообщество";
 "userprofile_votes_received" = "Голосов получено";
