--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -330,6 +330,7 @@
 "stats" = "Statistics";
 "my_publications" = "My publications";
 "my_subscribers" = "My subscribers";
+"my_subscriptions" = "My subscriptions";
 "balance" = "Balance";
 "account_management" = "Account management";
 "logout" = "Log out";
