search in topics vc voters stack fixed

--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -77,7 +77,8 @@
 "votes" = "votes";
 "publications" = "Publications";
 "publications_active_total" = "Active publications:";
-"search" = "Поиск";
+"search" = "Search";
+"search_topic" = "Search in";
 "profile" = "Profile";
 "edit" = "Edit";
 "progress" = "Progress";
