--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -78,6 +78,7 @@
 "publications" = "Публикации";
 "publications_active_total" = "Активных публикаций:";
 "search" = "Поиск";
+"search_topic" = "Поиск в";
 "profile" = "Профиль";
 "edit" = "Изменить";
 "progress" = "Прогресс";
