--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -308,6 +308,7 @@
 "voters" = "Voters";
 
 //Settings VC
+"location" = "Location";
 "social_media" = "Social media";
 "facebook" = "Facebook";
 "google" = "Google";
