--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -384,6 +384,7 @@
 "account_delete" = "Удаление аккаунта";
 "account_logout_description" = "Вы собираетесь выйти из учетной записи. Продолжить?";
 "account_delete_description" = "Удаление аккаунта - необратимое действие. Продолжить?";
+"account_location_empty" = "Пожалуйста, заполните Ваше местонахождение";
 
 //Userprofile
 "userprofile_is_in_community" = "В сообществе";
