--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -160,6 +160,7 @@
 //Hot VC
 "hot" = "Hot";
 "searching" = "Searching";
+"hot_participate" = "Participate";
 
 //Subscriptions VC
 "subscriptions" = "Subscriptions";
@@ -385,6 +386,7 @@
 "account_logout_description" = "You are about to sign out of your account. Continue?";
 "account_delete_description" = "Deleting an account is an irreversible action. Continue?";
 "account_location_empty" = "Please select your location";
+"claim" = "Claim";
 
 //Userprofile
 "userprofile_is_in_community" = "Is in community";
