--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -160,6 +160,7 @@
 //Hot VC
 "hot" = "Горячие";
 "searching" = "Поиск";
+"hot_participate" = "Участвовать";
 
 //Subscriptions VC
 "subscriptions" = "Подписки";
@@ -385,6 +386,7 @@
 "account_logout_description" = "Вы собираетесь выйти из учетной записи. Продолжить?";
 "account_delete_description" = "Удаление аккаунта - необратимое действие. Продолжить?";
 "account_location_empty" = "Пожалуйста, заполните Ваше местонахождение";
+"claim" = "Жалоба";
 
 //Userprofile
 "userprofile_is_in_community" = "В сообществе";
