Poll vc & Hot voting done

--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -379,6 +379,7 @@
 "survey_finished_notification" = "Опрос завершился!";
 "survey_finished_vote_notification" = "Опрос завершился, но Вы еще можете проголосовать!";
 "survey_banned_notification" = "Публикация была заблокирована";
+"survey_complete_notification" = "Опрос пройден";
 "open_url_embedded" = "Открыть в приложении";
 "open_url_in_app" = "Открыть в ";
 "save_setting" = "Сохранить";
