--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -34,6 +34,7 @@
 "api_not_supported" = "App version is outdated. Please update Thinkwhat";
 
 //Common
+"ready" = "Ready";
 "all" = "All";
 "title" = "Title";
 "caption" = "Caption";
@@ -419,10 +420,14 @@
 "new_poll_survey_topic" = "Topic";
 "new_poll_survey_title" = "Title";
 "new_poll_survey_enter_title" = "Enter title";
-"new_poll_survey_title_error_begin" = "The name must be at least ";
-"new_poll_survey_title_error_end" = " characters";
+"new_poll_survey_min_text_length_error_begin" = "The field must be at least ";
+"new_poll_survey_min_text_length_error_end" = " characters";
 "new_poll_survey_description" = "Description";
 "new_poll_survey_enter_description" = "Enter description";
 "new_poll_survey_question" = "Question";
 "new_poll_survey_enter_question" = "Ask question";
-
+"new_poll_survey_choices" = "Сhoices";
+"new_poll_survey_choice_placeholder" = "Choice №";
+"new_poll_survey_choice_add" = "Add choice";
+"new_poll_survey_images" = "Images";
+"new_poll_survey_image_add" = "Add image";
