--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -427,7 +427,9 @@
 "new_poll_survey_question" = "Вопрос";
 "new_poll_survey_enter_question" = "Сформулируйте вопрос";
 "new_poll_survey_choices" = "Варианты ответов";
-"new_poll_survey_choice_placeholder" = "Ответ №";
+"new_poll_survey_choice_placeholder" = "Вариант №";
 "new_poll_survey_choice_add" = "Добавить вариант";
+"new_poll_survey_choice_next" = "Далее";
+"new_poll_survey_choice_delete_notification" = "Опрос должен содержать минимум два варианта ответа";
 "new_poll_survey_images" = "Изображения";
 "new_poll_survey_image_add" = "Добавить изображение";
