--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -417,22 +417,26 @@
 
 //New poll
 "new_poll_readiness" = "Readiness";
-"new_poll_survey_topic" = "Topic";
-"new_poll_survey_title" = "Title";
-"new_poll_survey_enter_title" = "Enter title";
+"new_poll_topic" = "Topic";
+"new_poll_title" = "Title";
+"new_poll_title_placeholder" = "Enter title";
 "new_poll_survey_min_text_length_error_begin" = "The field must be at least ";
 "new_poll_survey_min_text_length_error_end" = " characters";
-"new_poll_survey_description" = "Description";
-"new_poll_survey_enter_description" = "Enter description";
-"new_poll_survey_question" = "Question";
-"new_poll_survey_enter_question" = "Ask question";
-"new_poll_survey_choices" = "Сhoices";
-"new_poll_survey_choice_placeholder" = "Choice №";
-"new_poll_survey_choice_add" = "Add choice";
-"new_poll_survey_choice_next" = "Next";
+"new_poll_description" = "Description";
+"new_poll_description_placeholder" = "Enter description";
+"new_poll_question" = "Question";
+"new_poll_question_placeholder" = "Ask question";
+"new_poll_choices" = "Сhoices";
+"new_poll_choice_placeholder" = "Choice №";
+"new_poll_choice_add" = "Add choice";
+"new_poll_choice_next" = "Next";
 "new_poll_survey_choice_delete_notification" = "The survey must contain at least two possible answers";
-"new_poll_survey_images" = "Images";
-"new_poll_survey_image_add" = "Add image";
-"new_poll_survey_image_placeholder" = "Add details (optional)";
-"new_poll_survey_hyperlink" = "Hyperlink";
-"new_poll_survey_hyperlink_placeholder" = "Add hyperlink (optional)";
+"new_poll_images" = "Images";
+"new_poll_image_add" = "Add image";
+"new_poll_image_placeholder" = "Add details (optional)";
+"new_poll_hyperlink" = "Hyperlink";
+"new_poll_hyperlink_placeholder" = "Add hyperlink (optional)";
+"new_poll_comments" = "Comments";
+"new_poll_comments_placeholder" = "Availability of comments";
+"new_poll_comments_on" = "Сomments are allowed";
+"new_poll_comments_off" = "Comments are forbidden";
