--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -417,22 +417,27 @@
 
 //New poll
 "new_poll_readiness" = "Готовность";
-"new_poll_survey_topic" = "Тема";
-"new_poll_survey_title" = "Титул";
-"new_poll_survey_enter_title" = "Введите название";
+"new_poll_topic" = "Тема";
+"new_poll_title" = "Титул";
+"new_poll_title_placeholder" = "Введите название";
 "new_poll_survey_min_text_length_error_begin" = "Поле должно состоять минимум из ";
 "new_poll_survey_min_text_length_error_end" = " знаков";
-"new_poll_survey_description" = "Подробности";
-"new_poll_survey_enter_description" = "Введите подробности";
-"new_poll_survey_question" = "Вопрос";
-"new_poll_survey_enter_question" = "Сформулируйте вопрос";
-"new_poll_survey_choices" = "Варианты ответов";
-"new_poll_survey_choice_placeholder" = "Вариант №";
-"new_poll_survey_choice_add" = "Добавить вариант";
-"new_poll_survey_choice_next" = "Далее";
+"new_poll_description" = "Подробности";
+"new_poll_description_placeholder" = "Введите подробности";
+"new_poll_question" = "Вопрос";
+"new_poll_question_placeholder" = "Сформулируйте вопрос";
+"new_poll_choices" = "Варианты ответов";
+"new_poll_choice_placeholder" = "Вариант №";
+"new_poll_choice_add" = "Добавить вариант";
+"new_poll_choice_next" = "Далее";
 "new_poll_survey_choice_delete_notification" = "Опрос должен содержать минимум два варианта ответа";
-"new_poll_survey_images" = "Изображения";
-"new_poll_survey_image_add" = "Добавить изображение";
-"new_poll_survey_image_placeholder" = "Добавьте описание (опционально)";
-"new_poll_survey_hyperlink" = "Ссылка";
-"new_poll_survey_hyperlink_placeholder" = "Добавьте ссылку (опционально)";
+"new_poll_images" = "Изображения";
+"new_poll_image_add" = "Добавить изображение";
+"new_poll_image_placeholder" = "Добавьте описание (опционально)";
+"new_poll_hyperlink" = "Ссылка";
+"new_poll_hyperlink_placeholder" = "Добавьте ссылку (опционально)";
+"new_poll_comments" = "Комментарии";
+"new_poll_comments_placeholder" = "Доступность комментариев";
+"new_poll_comments_on" = "Комментарии разрешены";
+"new_poll_comments_off" = "Комментарии запрещены";
+
