--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -444,3 +444,9 @@
 "new_poll_anonymity_placeholder" = "Анонимность автора";
 "new_poll_anonymity_on" = "Автор, голосующие и комментаторы скрыты";
 "new_poll_anonymity_off" = "Автор, голосующие и комментаторы видят друг друга";
+"new_poll_hot" = "Лента Горячие";
+"new_poll_hot_placeholder" = "Возможность за дополнительные баллы попасть в ленту Горячие";
+"new_poll_hot_on" = "Опрос будет опубликован в ленте Горячие";
+"new_poll_hot_off" = "Опрос не будет опубликован в ленте Горячие";
+"new_poll_limit" = "Количество участников";
+"new_poll_limit_placeholder" = "Опрос закроется при достижении указанного количества голосов";
