--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -448,5 +448,7 @@
 "new_poll_hot_placeholder" = "Возможность за дополнительные баллы попасть в ленту Горячие";
 "new_poll_hot_on" = "Опрос будет опубликован в ленте Горячие";
 "new_poll_hot_off" = "Опрос не будет опубликован в ленте Горячие";
-"new_poll_limit" = "Количество участников";
+"new_poll_limit" = "Число участников";
 "new_poll_limit_placeholder" = "Опрос закроется при достижении указанного количества голосов";
+"new_poll_limit_hint" = "Опрос закроется при достижении указанного количества голосов";
+"new_poll_limit" = "Стоимость публикации";
